Fixed zoomed lscp images overflowing on mobile. Tweaked page form layout.

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -410,7 +410,7 @@ margin: 0;
             }
 
             button + div.zoom img {
-            object-fit: cover;
+            object-fit: contain;
             height: 100%;
             max-width: 100%;
             margin: 0 auto;
@@ -426,7 +426,7 @@ margin: 0;
                 top: 0;
                 left: 0;
                 width: 100%;
-                height: 100vh;
+                height: 100%;
                 opacity: 1;
                 z-index: 2;
                 }
